--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ youtube_id: # your youtube channel id (youtube.com/@<youtube_id>)
 zotero_username: # your zotero username
 
 contact_note: >
-  Best way to reach me is E-mail.
+  Best way to reach me is through E-mail!
 
 # -----------------------------------------------------------------------------
 # Analytics and search engine verification
