--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,10 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
-contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+first_name: Ghritachi
+middle_name:
+last_name: Mahajani
+email: ghritachimahajani5+portfolio@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
 footer_text:
 keywords: ghritachi, machine-learning, jekyll-theme, portfolio-website # add your own keywords or leave empty
