--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,12 @@ middle_name:
 last_name: Mahajani
 email: ghritachimahajani5+portfolio@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-footer_text:
+footer_text: 
 keywords: ghritachi, machine-learning, jekyll-theme, portfolio-website # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ✴️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+contact_note: > 
+  Best way to reach me is through E-mail!
 
 url: https://gritsiem.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/. Leave blank for root
@@ -45,7 +47,7 @@ navbar_fixed: true
 footer_fixed: false
 search_enabled: false
 socials_in_search: true
-posts_in_search: true
+posts_in_search: false
 bib_search: true
 
 # Dimensions
@@ -144,7 +146,7 @@ collections:
   news:
     defaults:
       layout: post
-    output: true
+    output: false
   projects:
     output: true
 
@@ -187,6 +189,8 @@ exclude:
   - README.md
   - readme_preview/
   - vendor
+  - projects/unused/
+  - _projects/unused
 keep_files:
   - CNAME
   - .nojekyll
@@ -382,7 +386,7 @@ enable_math: true # enables math typesetting (uses MathJax)
 enable_tooltips: false # enables automatic tooltip links generated for each section titles on pages and posts
 enable_darkmode: true # enables switching between light/dark modes
 enable_navbar_social: false # enables displaying social links in the navbar on the about page
-enable_project_categories: true # enables categorization of projects into multiple categories
+enable_project_categories: false # enables categorization of projects into multiple categories
 enable_medium_zoom: true # enables image zoom feature (as on medium.com)
 enable_progressbar: true # enables a horizontal progress bar linked to the vertical scroll position
 enable_video_embedding: false # enables video embedding for bibtex entries. If false, the button opens the video link in a new window.
